# llllll

./: .gitignore  .gitmodules  README.md  api.py  bts.txt  conf.yaml  grammar.peg  justfile  llllll.hurl  main.py  pyproject.toml  requirements.txt
api/: main.py
docs/: main.typ
llllll/: __init__.py  act.py  bts.py  dqn.py  env.py  llm.py  map.py  plan.py  ppo.py
paper/: slide.typ  zotero.bib
www/: package-lock.json  package.json  svelte.config.js
www/.netlify/functions-internal/: sveltekit-render.mjs
www/.netlify/server/: manifest.js
www/.netlify/server/.vite/: manifest.json
www/.netlify/server/_app/immutable/assets/: _layout.B3K3PNI3.css  _page.fXmG3blx.css
www/.netlify/server/chunks/: internal.js  ssr.js
www/.netlify/server/entries/fallbacks/: error.svelte.js
www/.netlify/server/entries/pages/: _layout.svelte.js  _page.server.ts.js  _page.svelte.js
www/.netlify/server/nodes/: 0.js  1.js  2.js
www/src/: app.html  global.css
www/src/lib/: api.ts  piece.ts  plots.ts  scene.ts  store.ts  types.ts  utils.ts
www/src/lib/comps/: Chesspieces.svelte  Controller.svelte  Map.svelte  Simulation.svelte  Visualizer.svelte
www/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
www/src/store/: colors.ts
