[tool.poetry]
name = "llllll"
version = "0.1.0"
description = ""
authors = ["Noah Syrkis <noah@syrkis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ollama = "^0.3.3"
ipykernel = "^6.29.5"
fastapi = { extras = ["standard"], version = "^0.114.2" }
uvicorn = { extras = ["standard"], version = "^0.30.6" }
gymnasium = { extras = ["box2d"], version = "^0.29.1" }
lark = "^1.2.2"
ipython = "^8.29.0"
jupyterlab = "^4.2.5"
openai = "^1.52.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
parabellum = { path = "../parabellum" }
btc2sim = { path = "../btc2sim" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
