[project]
name = "llllll"
version = "0.1.0"
description = ""
authors = [{ name = "Noah Syrkis", email = "noah@syrkis.com" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "ollama>=0.3.3,<0.4",
    "ipykernel>=6.29.5,<7",
    "fastapi[standard]>=0.114.2,<0.115",
    "uvicorn[standard]>=0.30.6,<0.31",
    "gymnasium[box2d]>=0.29.1,<0.30",
    "lark>=1.2.2,<2",
    "ipython>=8.29.0,<9",
    "jupyterlab>=4.2.5,<5",
    "openai>=1.52.2,<2",
    "python-dotenv>=1.0.1,<2",
    "opencv-python>=4.11.0.86,<5",
]

[dependency-groups]
dev = ["parabellum", "btc2sim", "esch"]

[tool.uv]

[tool.uv.sources]
parabellum = { path = "../parabellum" }
btc2sim = { path = "../btc2sim" }
esch = { path = "../../esch" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
